--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,14 +5,14 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林), server: 213.183.53.208, port: 9079, type: ss, cipher: aes-256-cfb, password: TPqX8edgbAURcAMb}
-  - {name: 🇺🇸 美国-346.4KB/s(Youtube:不良林), server: 38.143.66.20, port: 9102, type: ss, cipher: aes-256-gcm, password: e4FCWrgpkji3QY}
-  - {name: 🇺🇸 美国-854.5KB/s(Youtube:不良林), server: 38.114.114.49, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇯🇵 日本-1.32MB/s(Youtube:不良林), server: 85.208.108.93, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 波兰-880.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林), server: 185.167.116.24, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇨🇳 中国-172.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34000, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-213.5KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.27MB/s(Youtube:不良林), server: 38.64.138.145, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-1.49MB/s(Youtube:不良林), server: 85.208.108.18, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.114.114.67, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-1.56MB/s(Youtube:不良林), server: 38.114.114.49, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.36MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 38.114.114.49, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-2.15MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇺🇸 美国-1.47MB/s(Youtube:不良林), server: 38.114.114.19, port: 3389, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
 proxy-groups:
@@ -21,14 +21,14 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
@@ -36,14 +36,14 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
@@ -52,14 +52,14 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
@@ -72,14 +72,14 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 📲 电报信息
@@ -87,14 +87,14 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
@@ -103,14 +103,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
   - name: 🎯 全球直连
@@ -128,14 +128,14 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇷🇺 俄罗斯联邦-907.3KB/s(Youtube:不良林)
-      - 🇺🇸 美国-346.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-854.5KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.32MB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-1.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-172.6KB/s(Youtube:不良林)
+      - 🇺🇸 美国-213.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.27MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.49MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.56MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.36MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-2.15MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.47MB/s(Youtube:不良林)
 rules:
