--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,15 +5,15 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.143.66.99, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.68.134.85, port: 3306, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.25MB/s(Youtube:不良林), server: 85.208.108.58, port: 8080, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇺🇸 美国-192.5KB/s(Youtube:不良林), server: 38.86.135.27, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.62MB/s(Youtube:不良林), server: 38.143.66.20, port: 8091, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇯🇵 日本-1.98MB/s(Youtube:不良林), server: 85.208.108.18, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
+  - {name: 波兰-880.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
+  - {name: 🇳🇱 荷兰-936.2KB/s(Youtube:不良林), server: 213.183.51.172, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
   - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.114.114.19, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
   - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.114.114.67, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
-  - {name: 🇺🇸 美国-1.35MB/s(Youtube:不良林), server: 38.114.114.49, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2, server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 38.114.114.49, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
 proxy-groups:
   - name: 🔰 节点选择
@@ -21,30 +21,30 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
@@ -52,15 +52,15 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
@@ -72,30 +72,30 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
@@ -103,15 +103,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
@@ -128,15 +128,15 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.25MB/s(Youtube:不良林)
-      - 🇺🇸 美国-192.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.62MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
+      - 波兰-880.1KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.35MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.33MB/s(Youtube:不良林) 2
+      - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
