--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-1.98MB/s(Youtube:不良林), server: 85.208.108.18, port: 7001, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇨🇳 中国-1.01MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林), server: 213.183.53.208, port: 9056, type: ss, cipher: aes-256-cfb, password: rNBfNuuANFCAk7KB}
-  - {name: 波兰-880.1KB/s(Youtube:不良林), server: 217.30.10.65, port: 9038, type: ss, cipher: aes-256-cfb, password: gYCYXfkUQEs2TaJQ}
-  - {name: 🇳🇱 荷兰-936.2KB/s(Youtube:不良林), server: 213.183.51.172, port: 9005, type: ss, cipher: aes-256-cfb, password: ZET59LF6DvCC8KVt}
+  - {name: 🇳🇱 荷兰-1.01MB/s(Youtube:不良林), server: 213.183.59.229, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
+  - {name: 🇦🇺 澳大利亚-734.0KB/s(Youtube:不良林), server: 185.167.116.24, port: 9050, type: ss, cipher: aes-256-cfb, password: FG5ddLsMPbV5CutE}
+  - {name: 🇺🇸 美国-1.26MB/s(Youtube:不良林), server: 38.143.66.99, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇺🇸 美国-2.04MB/s(Youtube:不良林), server: 38.114.114.69, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇳 中国-494.2KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
+  - {name: 🇺🇸 美国-907.6KB/s(Youtube:不良林), server: 38.86.135.27, port: 8009, type: ss, cipher: aes-256-gcm, password: XKFKl2rULjIp74}
   - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: 38.114.114.19, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇺🇸 美国-1.06MB/s(Youtube:不良林), server: 38.114.114.67, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
   - {name: 🇺🇸 美国-1.89MB/s(Youtube:不良林), server: 38.114.114.49, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
   - {name: 🇺🇸 美国-1.33MB/s(Youtube:不良林), server: 38.75.136.102, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇺🇸 美国-1.04MB/s(Youtube:不良林), server: 38.114.114.67, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-734.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-734.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-734.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-734.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-734.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-734.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-1.98MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.01MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-519.1KB/s(Youtube:不良林)
-      - 波兰-880.1KB/s(Youtube:不良林)
-      - 🇳🇱 荷兰-936.2KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-1.01MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-734.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.26MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.04MB/s(Youtube:不良林)
+      - 🇨🇳 中国-494.2KB/s(Youtube:不良林)
+      - 🇺🇸 美国-907.6KB/s(Youtube:不良林)
       - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.06MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.89MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.33MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.04MB/s(Youtube:不良林)
